RESOLVED FIXED126678
WebKit2 EFL build fix after r161530
https://bugs.webkit.org/show_bug.cgi?id=126678
Summary WebKit2 EFL build fix after r161530
Jinwoo Song
Reported 2014-01-08 20:55:20 PST
In file included from /mnt/buildbot/efl-linux-slave-2/efl-linux-64-release-wk2/build/Source/WTF/wtf/FastMalloc.h:28:0, from /mnt/buildbot/efl-linux-slave-2/efl-linux-64-release-wk2/build/Source/WebKit2/config.h:56, from /mnt/buildbot/efl-linux-slave-2/efl-linux-64-release-wk2/build/Source/WebKit2/WebProcess/WebPage/DrawingArea.cpp:26: /mnt/buildbot/efl-linux-slave-2/efl-linux-64-release-wk2/build/Source/WTF/wtf/StdLibExtras.h: In instantiation of ‘typename std::_Unique_if<T>::_Single_object std::make_unique(Args&& ...) [with T = WebKit::CoordinatedDrawingArea; Args = {WebKit::WebPage*&, const WebKit::WebPageCreationParameters&}; typename std::_Unique_if<T>::_Single_object = std::unique_ptr<WebKit::CoordinatedDrawingArea, std::default_delete<WebKit::CoordinatedDrawingArea> >]’: /mnt/buildbot/efl-linux-slave-2/efl-linux-64-release-wk2/build/Source/WebKit2/WebProcess/WebPage/DrawingArea.cpp:59:76: required from here /mnt/buildbot/efl-linux-slave-2/efl-linux-64-release-wk2/build/Source/WTF/wtf/StdLibExtras.h:342:64: error: cannot allocate an object of abstract type ‘WebKit::CoordinatedDrawingArea’ In file included from /mnt/buildbot/efl-linux-slave-2/efl-linux-64-release-wk2/build/Source/WebKit2/WebProcess/WebPage/DrawingArea.cpp:36:0: /mnt/buildbot/efl-linux-slave-2/efl-linux-64-release-wk2/build/Source/WebKit2/WebProcess/WebPage/CoordinatedGraphics/CoordinatedDrawingArea.h:39:7: note: because the following virtual functions are pure within ‘WebKit::CoordinatedDrawingArea’: In file included from /mnt/buildbot/efl-linux-slave-2/efl-linux-64-release-wk2/build/Source/WebKit2/WebProcess/WebPage/DrawingArea.cpp:27:0: /mnt/buildbot/efl-linux-slave-2/efl-linux-64-release-wk2/build/Source/WebKit2/WebProcess/WebPage/DrawingArea.h:89:18: note: virtual void WebKit::DrawingArea::setExposedRect(const WebCore::FloatRect&) /mnt/buildbot/efl-linux-slave-2/efl-linux-64-release-wk2/build/Source/WebKit2/WebProcess/WebPage/DrawingArea.h:90:32: note: virtual WebCore::FloatRect WebKit::DrawingArea::exposedRect() const In file included from /mnt/buildbot/efl-linux-slave-2/efl-linux-64-release-wk2/build/Source/WTF/wtf/FastMalloc.h:28:0, from /mnt/buildbot/efl-linux-slave-2/efl-linux-64-release-wk2/build/Source/WebKit2/config.h:56, from /mnt/buildbot/efl-linux-slave-2/efl-linux-64-release-wk2/build/Source/WebKit2/WebProcess/WebPage/DrawingArea.cpp:26: /mnt/buildbot/efl-linux-slave-2/efl-linux-64-release-wk2/build/Source/WTF/wtf/StdLibExtras.h: In function ‘typename std::_Unique_if<T>::_Single_object std::make_unique(Args&& ...) [with T = WebKit::CoordinatedDrawingArea; Args = {WebKit::WebPage*&, const WebKit::WebPageCreationParameters&}; typename std::_Unique_if<T>::_Single_object = std::unique_ptr<WebKit::CoordinatedDrawingArea, std::default_delete<WebKit::CoordinatedDrawingArea> >]’: /mnt/buildbot/efl-linux-slave-2/efl-linux-64-release-wk2/build/Source/WTF/wtf/StdLibExtras.h:343:5: error: control reaches end of non-void function [-Werror=return-type] cc1plus: all warnings being treated as errors make[2]: *** [Source/WebKit2/CMakeFiles/WebKit2.dir/WebProcess/WebPage/DrawingArea.cpp.o] Error 1 make[2]: *** Waiting for unfinished jobs.... /mnt/buildbot/efl-linux-slave-2/efl-linux-64-release-wk2/build/Source/WebKit2/WebProcess/Plugins/PluginView.cpp:499:6: warning: unused parameter ‘changed’ [-Wunused-parameter] make[1]: *** [Source/WebKit2/CMakeFiles/WebKit2.dir/all] Error 2 make: *** [all] Error 2
Attachments
Patch (2.44 KB, patch)
2014-01-08 21:38 PST, Jinwoo Song
no flags
Jinwoo Song
Comment 1 2014-01-08 21:38:45 PST
Gyuyoung Kim
Comment 2 2014-01-08 22:40:27 PST
CC'ing Tim and Simon, could you take a look this patch ?
WebKit Commit Bot
Comment 3 2014-01-08 23:10:37 PST
Comment on attachment 220698 [details] Patch Clearing flags on attachment: 220698 Committed r161548: <http://trac.webkit.org/changeset/161548>
WebKit Commit Bot
Comment 4 2014-01-08 23:10:41 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.