WebKit2 EFL build fix after r161530 https://bugs.webkit.org/show_bug.cgi?id=126678

Reviewed by Tim Horton.

Add PLATFORM(MAC) guards around setExposedRect() and exposedRect()
in DrawingArea and WebFrameLoaderClient.

* WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
(WebKit::WebFrameLoaderClient::transitionToCommittedForNewPage):
* WebProcess/WebPage/DrawingArea.h:


Canonical link: https://commits.webkit.org/144570@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161548 268f45cc-cd09-0410-ab3c-d52691b4dbfc